<resources>
    <!--Activity and App Names-->
    <string name="app_name">Meemeries</string>
    <string name="meme_finder_name">Meme Finder</string>
    <string name="imgur_content_description">Imgur Meme Image</string>
    <string name="meme_viewer_name">Meme Viewer</string>

    <!--Button Text-->
    <string name="send_to_server_button_text">Send To Server</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>

    <!--Menu Text-->
    <string name="action_settings">Settings</string>
    <string name="action_change_api">Change API</string>
    <string name="action_set_username">Set Username</string>
    <string name="action_refresh">Refresh</string>

    <!--Server Api Options-->
    <string name="api_name_appery">Appery</string>
    <string name="api_name_firebase">Firebase</string>
    <string name="api_name_backendless">Backendless</string>

</resources>
