<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MemeBrowser.MemeBrowser.MainBrowser">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="60"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_set_username"
        android:orderInCategory="80"
        android:title="@string/action_set_username"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_api"
        android:orderInCategory="100"
        android:title="@string/action_change_api"
        app:showAsAction="never" />

</menu>
